syntax = "proto3";

package event;

message SchedulingContext {
   repeated Env env = 2;
   float timeout = 3;
   message Env {
      string key = 1;
      string value = 2;
   }

}

message Target {
   string id = 1;
   string cwd = 2;
   string handler = 3;
   SchedulingContext context = 4;
}

enum Type {
   HTTP = 0;
   DATABASE = 1;
   SCHEDULE = 3;
   FIREHOSE = 4;
   SYSTEM = 5;
   BUCKET = 6;
   RABBITMQ = 7;
}

message Event {
   string id = 1;
   Type type = 2;
   Target target = 3;
}

message Pop {
   string id = 1;
}

message Complete {
   string id = 1;
   message Result {}
}



service Queue {
   rpc pop(Pop) returns (Event);
   rpc complete(Complete) returns (Complete.Result);
}
