syntax = "proto3";

package Database;



message Change {

    Kind kind = 1;

    string collection = 2;

    string document = 3;

    string documentKey = 4;

    UpdateDescription updateDescription = 5;

    message UpdateDescription {
        string updatedFields = 1;
        string removedFields = 2;
    }

    enum Kind {
        INSERT = 0;
        UPDATE = 1;
        REPLACE = 2;
        DELETE = 3;
    }

    message Pop {
        string id = 1;
    }
}

service Queue {
    rpc pop(Change.Pop) returns (Change);
}
 